# yadisk-upload

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.py
cmake/dependencies/: boost.cmake  common.cmake  docopt.cmake  easyloggingpp.cmake  gtest.cmake  libressl.cmake  openssl.cmake  zlib.cmake
cmake/modules/: StaticMSVC.cmake  StaticMSVC_C.cmake  StaticMSVC_CXX.cmake  gtest.cmake
conan/: conandata.yml  conanfile.py
conan/test_package/: CMakeLists.txt  conanfile.py  test.cpp
doc/: CMakeLists.txt  doxygen  doxygen.cmake  index.h
include/yandex/: disk.hpp  logging.hpp  transport.hpp
misc/: build.remote
src/: Logging.cpp  Logging.hpp  gettext.h  logging.hpp  stdlogger.cpp  yadisk-upload.cpp  yadisk-upload_config.cfg
src/yandex/: disk.cpp  logging.hpp  tls_context.cpp  tls_context.hpp  tls_transport.cpp  tls_transport.hpp  transport.cpp
test/: CMakeLists.txt  test.cpp  unit.cpp
test/utils/: BaseEcho.hpp  TLSEcho.cpp  TLSEcho.hpp  TlsEcho.cpp  TlsEcho.hpp
test/yandex/: t_disk.hpp  t_tls_transport.hpp  transport_mock.hpp
test_package/: CMakeLists.txt  conanfile.py  logging.hpp  test.cpp
